--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("./basics/base.css");
+@import url("basics/base.css");
 
-@import url("./components/book.shop.css");
-@import url("./components/modal.css");
+@import url("components/book.shop.css");
+@import url("components/modal.css");
